--- a/www/wp-content/themes/yana/css/_masthead.scss
+++ b/www/wp-content/themes/yana/css/_masthead.scss
@@ -54,7 +54,7 @@ $vignette-height: 480px;
   p {
     margin: em(12px,18px);
     @include sans-roman(em(18px), (32/18));
-    text-shadow: 0px 2px 2px rgba(#000, 0.2);
+    text-shadow: 0px 2px 6px rgba(0,0,0,0.3);
     color: #fff;
   }
 
