--- a/www/wp-content/themes/yana/css/_homepage.scss
+++ b/www/wp-content/themes/yana/css/_homepage.scss
@@ -63,7 +63,28 @@
   }
 
   @include breakpoint(mobile) {
-    display: none;
+    //display: none;
+    margin-top: 18px;
+
+    .entry {
+      float: none;
+      width: 100%;
+      height: auto;
+      display: block;
+      background: $darkteal;
+      border-bottom: 1px solid #FFF;
+
+      .inner {
+        display: block;
+        padding: 12px 16px;
+        vertical-align: middle;
+      }
+    }
+
+    .entry-1 { background-color: $yellow; }
+    .entry-2 { background-color: $orange; }
+    .entry-3 { background-color: $green; }
+
   }
 }
 
