--- a/www/wp-content/themes/yana/css/_masthead.scss
+++ b/www/wp-content/themes/yana/css/_masthead.scss
@@ -42,9 +42,9 @@ $vignette-height: 480px;
   }
 
   .masthead-title {
-    margin: em(12px,60px);
-    @include mono-bold(em(60px), (72/60));
-    text-shadow: 0px 2px 2px rgba(#000, 0.2);
+    margin: 0.2em;
+    @include mono-bold(3.75em, 1.2);
+    text-shadow: 0px 1px 8px rgba(0, 0, 0, 0.4);
 
     .home & {
       @include mono-bold(em(84px), 1);
@@ -52,9 +52,9 @@ $vignette-height: 480px;
   }
 
   p {
-    margin: em(12px,18px);
-    @include sans-roman(em(18px), (32/18));
-    text-shadow: 0px 2px 6px rgba(0,0,0,0.3);
+    margin: em(12px,20px);
+    @include sans-roman(em(20px), (32/20));
+    text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.6);
     color: #fff;
   }
 
@@ -64,8 +64,6 @@ $vignette-height: 480px;
     z-index: 6;
     max-width: em(504px);
     height: em(430px - 48px);
-
-
   }
 
   .text {
