Fixes before Dreamhost move

--- a/www/wp-content/themes/yana/css/_header.scss
+++ b/www/wp-content/themes/yana/css/_header.scss
@@ -127,6 +127,10 @@ $logo-gutter: 30px;
     padding: 0 0 em(24px);
   }
 
+  ul.menu > li {
+    width: 23%;
+  }
+
   a {
     display: block;
     text-transform: uppercase;
